ENG-1114 browser comp. fixed ie related issue (action hist not visible) display initial is not supported in ie
git-tfs-id: [http://hillstfs2013:8080/tfs/Phytel]$/Nightingale;C13041

--- a/Client Apps/NG/Assets/Production/Current/Nightingale.Assets/Styles/CSS/application.css
+++ b/Client Apps/NG/Assets/Production/Current/Nightingale.Assets/Styles/CSS/application.css
@@ -4803,7 +4803,8 @@ section:not(.slider) .btn.active.toggle[data-method="slider"][data-type="remove"
 .widget.fullscreen .arrow-runner {
   display: none; }
 .widget.fullscreen > .content .fullscreen-only {
-  display: initial; }
+  display: block;
+  /*initial is not supported in ie*/ }
 
 /* General settings */
 div.selector, div.selector span, div.checker span, div.radio span, div.uploader, div.uploader span.action, div.button, div.button span {
