--- a/Client Apps/NG/Assets/Production/Current/Nightingale.Assets/Styles/partials/_widgets.scss
+++ b/Client Apps/NG/Assets/Production/Current/Nightingale.Assets/Styles/partials/_widgets.scss
@@ -59,6 +59,6 @@
     display: none;
   }
   > .content .fullscreen-only {
-      display: initial;
+      display: block;   /*initial is not supported in ie*/
   }
 }
